@@ -12,7 +12,8 @@ Changes for Perl programming language extension Module-Install
 	- If the DSL code fails, say why (ADAMK)
 	- autoinstall doesn't die on CPAN-1.81 (JJORE)
 	- Check 'copyrights' section for license also (CHORNY)
-	- Test passing coreect params to EU::MM (CHORNY)
+	- Test passing correct params to EU::MM (CHORNY)
+	- Use BUILD_REQUIRES EU::MM param (CHORNY)
 
 0.91 Thu 28 May 2009
 	- Add missing dependency on Parse::CPAN::Meta
